fix: replace Java 9+ List.of/Set.of/Map.of with JDK 8 compatible APIs
- Replace List.of(x) with Arrays.asList(x) and Collections.emptyList() where appropriate
- Replace Map.of(k,v) single-entry with Collections.singletonMap(k,v)
- Replace Map.of() with Collections.emptyMap()
- Replace multi-entry Map.of with LinkedHashMap initializer (preserves insertion order)
- Replace List.of(...) constants with Collections.unmodifiableList(Arrays.asList(...))
- All 122 tests pass with mvn test